# rcj25_GPSR

./: README.md
gpsr25/: CMakeLists.txt  README.md  package.xml
gpsr25/launch/: gpsr_main.launch
gpsr25/mod/: gpsr-mono7.py  gpsr-mono8.py  gpsr-qrreader3.py  gpsr-super8.py  simple.py
gpsr25/src/: ask_name.py  ask_name_new.py  ask_person_dis.py  chaser.py  chaser_setup_node.py  cmd.txt  cmd2.txt  cmd_gen.py  cmd_gen_ori.py  config.py  dbg_mod.py  delay.py  ex_mod.py  find_name.py  find_obj.py  gpsr-qrreader3.py  gpsr2log.txt  gpsr2loglaunch.txt  gpsr_ai.py  master.py  person_distance.py  person_finder.py  simple_base_control.py  test.py  test_topic.py  utils.py
gpsr25/test_src/: test_ask_name.py
tidy_up/: CMakeLists.txt  package.xml
tidy_up/src/: tu_master.py
tidy_up/srv/: ClassifyItem.srv
tu_package/: CMakeLists.txt  package.xml
tu_package/src/: cut_image.py  depth_meter.py  feature_obj_find.py  number_objects.py  obj_center.py  obj_find.py  tool_number_objects.py
